[package]
name = "wusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bliss-audio = { version = "0.4.2", features  = ["serde"] }
rayon = "1.5"
clap = "2.34"
sled = "0.34"
walkdir = "2"
ffmpeg-next = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
half = "1.8"
blake3 = { version = "1.2", features = ["traits-preview"] }
requestty = "0.1.3"
rust-fuzzy-search = "0.1.1"